tests/invalid/if/i12_missing_endif.f
program noendif
  integer x
  x = 5
  if (x .GT. 0) then
    print *, 'positivo'
end
